nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1st-web
  labels:
    app: web-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: web-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: nginx:1.14-alpine
      
        name: web
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: pv-web
          mountPath: /1st-web
      volumes:
      - name: pv-web
        persistentVolumeClaim:
          claimName: pvc-web
---
# nginx 서비스
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web-app
  type: NodePort #Ingress를 사용하므로 ClusterIP로 타입 설정했습니다.
  clusterIP: 10.100.100.100
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      NodePort: 30100
