nginx-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1st-web
  labels:
    app: web-app # label을 web-app로 설정 (nginx-sign deployment, nginx-order deployment와 label 구분)
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
      
# RollingUpdate 전략 설정
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: jinwoo0824/web:v1.4
        name: web
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
# 컨테이너 준비 상태 check
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

# 컨테이너 준비 상태 check
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5


        volumeMounts:
        - name: pvcweb
          mountPath: /1st-web
      volumes:
      - name: pvcweb
        persistentVolumeClaim:
          claimName: pvcweb
      nodeSelector:
        app: web-app

---

apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web-app # Node Selector를 사용하여 "web-app" label로 등록된 Pod만 service 처리
  type: NodePort 
  clusterIP: 10.100.100.100
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 31000
