test-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1st-web
  labels:
    app: web-app
spec:
  replicas: 6
  selector:
    matchLabels:
      app: web-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: jinwoo0824/web:v1.0
        name: web
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:  # containers 항목 아래로 들여쓰기
        - name: pvweb
          mountPath: /1st-web
      volumes:
      - name: pvweb
        persistentVolumeClaim:
          claimName: pvcweb
---
# nginx 서비스
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  selector:
    app: web-app
  type: ClusterIP #Ingress를 사용하므로 ClusterIP로 타입 설정했습니다.
  clusterIP: 10.100.100.100
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


#수정된 부분 : 여기에 claimName 항목에 pvc name을 넣어야 pvc와 딱 붙여주는 역할을 해줍니다
#기존에 넣으셨던 hostPath: 항목은 pv yaml파일에 적용되는거기때문에 넣으면안됩니다.

#기존에 넣으셨던 설정부분을 빼고 노드 스케줄링 부분은 워커노드 1에 
#web 레이블을 줘서 스케줄링할수있게 하겠습니다 nodeSelector 부분에 같은 레이블 넣어줘야함.
