tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 1st-was
  labels:
    app: was-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: was-app
    spec:
      containers:
      - image: jinwoo0824/tomcat:v1.1
        name: was
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
        - name: pv-web
          mountPath: /1st-web
      volumes:
      - name: pv-was
        persistentVolumeClaim:
          claimName: pvc-was
---
apiVersion: v1
kind: Service
metadata:
  name: was-svc # 서비스 이름: was-svc, app 레이블: was-app타입: ClusterIP
spec:
  selector:
    app: was-app
  type: ClusterIP
  clusterIP: 10.100.100.101
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
