1st-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 1st-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /1st-web
        pathType: Prefix
        backend:
          service:
            name: 1st-svc
            port:
              number: 80
      paths:
      - path: /1st-was
        pathType: Prefix
        backend:
           service:
             name: 1st-was
             port:
               number: 8080
