ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /main
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
          - path: /sign
            pathType: Prefix
            backend:
              service:
                name: websign-svc
                port:
                  number: 80
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: weborder-svc
                port:
                  number: 80
          - path: /tomcat
            pathType: Prefix
            backend:
              service:
                name: was-svc
                port:
                  number: 8080
